--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+    <!-- Corregir el href y eliminar el tipo incorrecto -->
+    <link rel="icon" href="/01-icono.png" type="image/png">
+    <title>Adivina el color</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-
   </body>
 </html>
